paths/usr/share/cargo/registry/phf_macros-0.8.0/tests/compile-fail/bad-syntax.rs
rust-phf_macros0.8-devel
